<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{info.nameStore}"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:typeface="sans" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RatingBar
                    android:id="@+id/rtTotalRate"
                    style="@style/ImageRatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:rating="@{info.totalRate}"
                    android:stepSize="0.5" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvTotalFeedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:text='@{info.totalFeedback+" "+@string/total_rating}'
                android:textColor="@android:color/black"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <ImageView
                android:id="@+id/ivCategory"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_shopping" />

            <TextView
                android:id="@+id/tvCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:text="@{info.category}"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <ImageView
                android:id="@+id/ivOpened"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_clock" />

            <TextView
                android:id="@+id/tvOpened"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:text="@{info.setOpen}"
                android:textColor="@android:color/holo_green_light"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTimeOpenAndClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:text="@{info.timeOpen}"
                android:textColor="@android:color/darker_gray" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="16dp">

        <RatingBar
            android:id="@+id/rtRating"
            style="@style/ImageRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:isIndicator="false"
            android:numStars="5"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:rating="0"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:stepSize="0.5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/tv_user_rating_hint" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:tint="@android:color/holo_red_light"
                android:src="@drawable/ic_camera" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_light"
                android:text="@string/btn_upload_image" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:tint="@android:color/holo_red_light"
                android:src="@drawable/ic_location"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_light"
                android:text="@string/btn_check_in"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:tint="@android:color/holo_red_light"
                android:src="@drawable/ic_save"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_light"
                android:text="@string/btn_save"/>
        </LinearLayout>
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@android:color/darker_gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_location"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:maxLines="1"
            android:text="@{info.address}"
            android:layout_marginLeft="8dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingRight="16dp"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_navigation"
                android:layout_gravity="right|center_vertical"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{info.distance}"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/darker_gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_call"
                />
            <TextView
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call"
                android:layout_gravity="center_vertical"
                android:textColor="@android:color/holo_red_light" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_directions"
                />
            <TextView
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/direct"
                android:layout_gravity="center_vertical"
                android:textColor="@android:color/holo_red_light" />
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/darker_gray"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
        android:layout_width="match_parent"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_credit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:textColor="@android:color/black"
            android:text="Có thanh toán bằng thẻ" />
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_seat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:textColor="@android:color/black"
                android:text="Có đặt chỗ trực tuyến" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_order" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:textColor="@android:color/black"
                android:text="Có order trực tuyến" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/darker_gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_more_horiz" />

        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:textColor="@android:color/black"
            android:text="Xem thêm thông tin" />
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/ic_arrow_right"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@android:color/darker_gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_wifi" />

        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:textColor="@android:color/black"
            android:text="Mật khẩu Wifi" />
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/ic_arrow_right"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@android:color/darker_gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_height="wrap_content">
        <RatingBar
            style="@style/ImageRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="false"
            android:numStars="5"
            android:rating="0"
            android:stepSize="0.5" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_user_rating_hint"/>
    </LinearLayout>
</LinearLayout>
